[gd_scene load_steps=2 format=3 uid="uid://bnvjm4ndvv8vb"]

[ext_resource type="Script" path="res://lobby.gd" id="1_ae881"]

[node name="Lobby" type="Node3D"]
script = ExtResource("1_ae881")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MainContainer" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 414.0
offset_top = 252.0
offset_right = -414.0
offset_bottom = -252.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/MainContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MainContainer/MarginContainer"]
layout_mode = 2

[node name="Heading" type="Label" parent="CanvasLayer/MainContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Hello"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Name" type="LineEdit" parent="CanvasLayer/MainContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Name"
alignment = 1

[node name="Host" type="Button" parent="CanvasLayer/MainContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "HOST"

[node name="Join" type="Button" parent="CanvasLayer/MainContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "JOIN"

[node name="LineEdit" type="LineEdit" parent="CanvasLayer/MainContainer/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
placeholder_text = "Room id"
alignment = 1

[node name="StartGame" type="Button" parent="CanvasLayer/MainContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Start Game"

[connection signal="pressed" from="CanvasLayer/MainContainer/MarginContainer/VBoxContainer/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="CanvasLayer/MainContainer/MarginContainer/VBoxContainer/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="CanvasLayer/MainContainer/MarginContainer/VBoxContainer/StartGame" to="." method="_on_start_game_pressed"]
